tests/negative/gold/export_cyclic5_test.gold
tests/negative/export_cyclic5_b.toit:6:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic5_c.toit:6:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
tests/negative/export_cyclic5_c.toit:6:1: error: Cyclic export dependency
export *
^~~~~~
tests/negative/export_cyclic5_b.toit:6:1: note: This clause contributes to the 'export' cycle
export *
^~~~~~
Compilation failed.
